# ml-for-tabulardata

./: README.md  chapter04.ipynb  chapter05.ipynb  chapter06.ipynb  main.py  pyproject.toml
