[project]
name = "ml-for-tabulardata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boruta>=0.4.3",
    "category-encoders>=2.8.1",
    "lightgbm>=4.6.0",
    "lofo-importance>=0.3.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "xgbfir>=0.3.1",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
]
